package com.example.proiectis;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ProiectIsApplication {

    public static void main(String[] args) {
        SpringApplication.run(ProiectIsApplication.class, args);
    }

}
