package com.example.proiectis.model;

public enum Sport {
    Football, Basket, Tennis, Handball

}
