@startuml

title __PROIECTIS's Class Diagram__\n

  namespace com.example.proiectis {
    class com.example.proiectis.ProiectIsApplication {
    }
  }
  

  namespace com.example.proiectis {
    namespace controller {
      class com.example.proiectis.controller.LoginController {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace model {
      class com.example.proiectis.model.Field {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace model {
      class com.example.proiectis.model.Login {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace model {
      class com.example.proiectis.model.Program {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace model {
      enum Sport {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace model {
      class com.example.proiectis.model.Team1v1 {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace model {
      class com.example.proiectis.model.Team5v5 {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace model {
      class com.example.proiectis.model.Team7v7 {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace model {
      class com.example.proiectis.model.User {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace repository {
      interface com.example.proiectis.repository.LoginRepository {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace service {
      interface com.example.proiectis.service.LoginService {
      }
    }
  }
  

  namespace com.example.proiectis {
    namespace service {
      class com.example.proiectis.service.LoginServiceImpl {
      }
    }
  }
  

  com.example.proiectis.controller.LoginController o-- com.example.proiectis.service.LoginService : loginService
  com.example.proiectis.model.Field o-- com.example.proiectis.model.Sport : type
  com.example.proiectis.model.User o-- com.example.proiectis.model.Sport : favoritSport
  com.example.proiectis.service.LoginServiceImpl .up.|> com.example.proiectis.service.LoginService
  com.example.proiectis.service.LoginServiceImpl o-- com.example.proiectis.repository.LoginRepository : loginRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
